--- a/assets/bio.css
+++ b/assets/bio.css
@@ -36,7 +36,7 @@ ul  {
 
 .nav li span:hover {
     padding-bottom: 3px;
-    border-bottom: 3px solid #FFE794;
+    border-bottom: 3px solid #523F6E;
     
 }
 
@@ -167,7 +167,7 @@ p {
 
 .footnav li span:hover {
     padding-bottom: 3px;    
-    border-bottom: 3px solid #FFE794;
+    border-bottom: 3px solid #523F6E;
 
 }
 
