--- a/assets/bio.css
+++ b/assets/bio.css
@@ -40,6 +40,12 @@ ul  {
     
 }
 
+.nav li span:active {
+    padding-bottom: 3px;
+    border-bottom: 3px solid #523F6E;
+    
+}
+
 /* FFE794 523F6E */
 
 
@@ -171,6 +177,12 @@ p {
 
 }
 
+.footnav li span:active {
+    padding-bottom: 3px;
+    border-bottom: 3px solid #523F6E;
+    
+}
+
 .contact {
     grid-area: contact;
     justify-self: center;
@@ -195,7 +207,7 @@ p {
 }
 
 .contact a:hover {
-   /* color: #3F2A5E; */
+
     
     color: #3F2A5E; 
    /*  text-shadow: 0px 1px 6px #5F4881; */
