--- a/assets/bio.css
+++ b/assets/bio.css
@@ -14,6 +14,7 @@ a {
 .nav {
     grid-area: nav;
     justify-self: end;
+    margin-top: -8px;
 }
 
 .logo img {
@@ -59,10 +60,10 @@ ul  {
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
     grid-template-areas: 
-        "logo . . . . . . . . . nav nav"
+        "logo . . . . . . . . nav nav nav"
         ". . headshot headshot resume resume . . . . . ."
         ". . position position position position position position position . . ."
-        "footnav footnav . . contact contact contact contact . . . footlogo"
+        "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
         
 }
 
@@ -236,7 +237,17 @@ p {
 
 
 
-@media (max-width: 768px) {
+
+
+
+
+
+
+/* ------------------ iPad and landscape phones ------------------------*/
+
+
+
+@media (max-width: 825px) {
     
      body {
         margin: 50px 50px 30px;
@@ -245,10 +256,10 @@ p {
     .container {
         grid-gap: 0px 20px;
         grid-template-areas: 
-        "logo . . . . . . . . . nav nav"
-        ". headshot headshot . . . . . . . . ."
+        "logo . . . . . . . . nav nav nav"
+        ". headshot headshot headshot headshot . . . . . . ."
         ". position position position position position position position position position . ."
-        "footnav footnav . . contact contact contact contact . . . footlogo"
+        "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
     
@@ -272,14 +283,94 @@ p {
          font-size: 20px;
  
      }
-    
-    .contact li {
-        margin: 0px 8px;
-     }  
 
     
      .footlogo img {
         height: 40px;
      }
 
+}
+
+
+/* ------------------ Landscape smaller phones ------------------------*/
+
+
+@media (max-width: 640px) {
+    
+    .container {
+        grid-gap: 0px 20px;
+        grid-template-areas: 
+        "logo . . . . . . . . nav nav nav"
+        ". headshot headshot headshot headshot . . . . . . ."
+        ". position position position position position position position position position position ."
+        "footnav footnav footnav contact contact contact contact contact contact contact . footlogo"
+    
+     }
+    
+    
+}
+
+
+
+/* ------------------ Bigger phones ------------------------*/
+
+
+@media (max-width: 414px) {
+    
+    body {
+        margin: 35px 35px 75px;
+     }
+    
+     .container {
+        grid-template-columns: repeat(6, 1fr);
+        grid-gap: 0px 20px;
+        grid-template-areas: 
+        "logo nav nav nav nav nav"
+        "headshot headshot headshot . . . "
+        "position position position position position position"
+        "contact contact contact contact contact contact"
+        ". . footlogo footlogo . ."
+    
+     }
+    
+    .headshot img {
+        margin-top: 50px;
+    }  
+    
+    .position {
+         margin: 10px 0px 50px;
+        
+    }
+    
+     .footnav {
+        display: none;
+    }
+    
+    .footlogo {
+        margin-top: 70px;
+        justify-self: center;
+    }
+
+}
+
+
+/* ------------------ Galaxy S5 & iPhone 6, etc ------------------------*/
+
+
+
+
+
+/* ------------------ iPhone 5 / SE ------------------------*/
+
+
+@media (max-width: 320px) {
+    
+    body {
+        margin: 25px 25px 75px;
+     }
+    
+    .contact li {
+       margin: 0px 8px;
+   }
+    
 }
