--- a/assets/bio.css
+++ b/assets/bio.css
@@ -4,6 +4,8 @@ html {
 
 body {
     margin: 90px 100px 50px;
+    font-family: "helvetica neue", helvetica, arial, sans-serif;
+
 }
 
 a {
@@ -25,7 +27,6 @@ a {
 ul  {
     list-style-type: none;
     line-height: 170%;
-    font-family: helvetica neue;
     font-weight: bold;
     padding: 0;
     margin: 0;
@@ -105,7 +106,6 @@ ul  {
 
 
 p {
-    font-family: helvetica neue;
     margin: 0;
 }
 
@@ -155,7 +155,6 @@ p {
     grid-area: contact;
     justify-self: center;
     align-self: center;
-    font-family: helvetica neue;
     font-weight: bold;
     font-size: 20px;
     letter-spacing: -.5px;
