--- a/assets/bio.css
+++ b/assets/bio.css
@@ -119,7 +119,16 @@ p {
     margin: 20px 0px 200px;
 }
 
+.position span {
+    padding-bottom: 0px;
+    border-bottom: 2px solid transparent;
+    transition: border .2s cubic-bezier(1, 0.04, 1, 1);
+}
 
+.position span:hover {
+    padding-bottom: 0px;
+    border-bottom: 2px solid #00b8aa;
+}
 
 
 
