--- a/assets/bio.css
+++ b/assets/bio.css
@@ -153,7 +153,7 @@ p {
 .veolist span {
     font-weight: normal;
     letter-spacing: -0.5px;
-    color: #2c4e6d;
+    color: #194844;
     font-size: 23px;
 }
 
