--- a/assets/bio.css
+++ b/assets/bio.css
@@ -317,6 +317,11 @@ p {
         
     }
     
+      .contact li {
+
+    margin: 0px 12px;
+}
+    
      .footnav {
         display: none;
     }
